# the-jalait-project

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
.env/: .env.dev
data/: text-to-speech.txt
jalait/: __init__.py  core.py  env.py  helpers.py  predict.py
jalait/front/: corpus.py  inputs.py
jalait/notebooks/: 00-text-to-speech.ipynb
jalait/prompts/: __init__.py  _base.py  analyse.py  basic.py  insight.py
notebooks/: 00-text-to-speech.ipynb
tests/unit/: test_predict.py  test_text_to_speech.py
tests/unit/prompts/: test_analyse.py  test_base.py  test_basic.py  test_insight.py
utils/: build.sh  cd.yaml
